--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "build/index.js",
   "scripts": {
     "start": "bash ./src/esign/update-esign-repo.sh",
+    "convert": "bash ./src/esign/update-old-apps-json.sh",
     "format": "yarn prettier --write .",
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepare": "husky install"
